# mandiri-app

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/: CMakeLists.txt
app/src/androidTest/java/com/mandiri/application/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/mandiri/application/: App.kt  Keys.java
app/src/main/java/com/mandiri/application/base/arch/: BaseActivity.kt  BaseContract.kt  BaseRepositoryImpl.kt  BaseUseCase.kt  ViewModelFactory.kt
app/src/main/java/com/mandiri/application/base/exception/: ApiErrorException.kt  NoInternetConnectionException.kt  UnexpectedApiErrorException.kt
app/src/main/java/com/mandiri/application/base/model/: Resource.kt
app/src/main/java/com/mandiri/application/base/wrapper/: DataResource.kt  ViewResource.kt
app/src/main/java/com/mandiri/application/data/service/: GenreService.kt  MovieService.kt
app/src/main/java/com/mandiri/application/di/: ApplicationModule.kt  DataModule.kt  NetworkModule.kt  UsecaseModule.kt  ViewModelModule.kt
app/src/main/java/com/mandiri/application/domain/: DiscoverMovieByUsecase.kt  GetDetailMovieUsecase.kt  GetGenresOfMovieUsecase.kt  GetMovieReviewsUsecase.kt  GetMovieVideoUsecase.kt
app/src/main/java/com/mandiri/application/feature/main/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/mandiri/application/feature/movie/: MovieDetailActivity.kt  MovieDetailViewModel.kt
app/src/main/java/com/mandiri/application/feature/moviebygenre/: MoviesByGenreActivity.kt  MoviesByGenreViewModel.kt
app/src/main/java/com/mandiri/application/feature/moviesbygenre/: MoviesByGenreActivity.kt  MoviesByGenreViewModel.kt
app/src/main/res/drawable/: bg_blue_a400.xml  bg_blue_grey_100.xml  bg_button.xml  bg_outline.xml  ic_arrow.xml  ic_dot.xml  ic_star.xml
app/src/main/res/font/: open_sans_italic.xml
app/src/main/res/layout/: activity_main.xml  activity_movie_detail.xml  activity_movies_by_genre.xml  activity_review_detail.xml  activity_reviews_by_movie.xml  activity_trailer.xml  view_item_genre.xml  view_item_genre_background.xml  view_item_movie.xml  view_item_review.xml
app/src/main/res/values/: colors.xml  preloaded_fonts.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mandiri/application/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+19 files in other folders)
